--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+[Aa]ssets/AssetStoreTools
+[Bb]uild/
 [Ll]ibrary/
+[Ll]ocal[Cc]ache/
+[Uu]nityGenerated/
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
